@@ -88,6 +88,7 @@ return array(
                     array('LLL:EXT:ke_search/Resources/Private/Language/locallang_db.xlf:tx_kesearch_filters.rendertype.I.0', 'select'),
                     array('LLL:EXT:ke_search/Resources/Private/Language/locallang_db.xlf:tx_kesearch_filters.rendertype.I.1', 'list'),
                     array('LLL:EXT:ke_search/Resources/Private/Language/locallang_db.xlf:tx_kesearch_filters.rendertype.I.2', 'checkbox'),
+                    array('LLL:EXT:ke_search/Resources/Private/Language/locallang_db.xlf:tx_kesearch_filters.rendertype.I.3', 'dateRange'),
                 ),
                 'size' => 1,
                 'maxitems' => 1,
@@ -181,5 +182,7 @@ return array(
         'checkbox' => array('showitem' => 'sys_language_uid,l10n_parent, l10n_diffsource, hidden,'
             . ' title,rendertype, markAllCheckboxes, options, shownumberofresults,'
             . ' alphabeticalsorting'),
+        'dateRange' => array('showitem' => 'sys_language_uid,l10n_parent, l10n_diffsource, hidden,'
+            . ' title,rendertype'),
     )
 );
