@@ -8,6 +8,7 @@
 		<f:case value="select"><f:render partial="Filters/Select" arguments="{conf: conf, filter: filter}" /></f:case>
 		<f:case value="list"><f:render partial="Filters/List" arguments="{conf: conf, filter: filter}" /></f:case>
 		<f:case value="checkbox"><f:render partial="Filters/Checkbox" arguments="{conf: conf, filter: filter}" /></f:case>
+		<f:case value="dateRange"><f:render partial="Filters/DateRange" arguments="{conf: conf, filter: filter}" /></f:case>
 		<f:case value="custom"><f:format.raw>{filter.rawHtmlContent}</f:format.raw></f:case>
 	</f:switch>
 </f:for>
